fix (editor) alignment issues

--- a/packages/selenium-ide/src/neo/components/TestRow/style.css
+++ b/packages/selenium-ide/src/neo/components/TestRow/style.css
@@ -4,7 +4,7 @@
 }
 
 .test-table td {
-  font-size: 12px;
+  font-size: 13px;
 }
 
 .test-table tbody tr {
